# agent-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix
.claude/skills/pr-review/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  han-review.yml
docs/plans/: 001-agent-core.md  002-resilient-loop-renewable-budget.md  003-modelmind-tool-schemas.md  remove-v0.1.md
docs/research/: durable-execution-and-replay-safety.md
docs/specs/: 001-agent-core.md  002-resilient-loop-renewable-budget.md  003-modelmind-tool-schemas.md
examples/: run.rs  service.rs
src/: action.rs  budget.rs  error.rs  event.rs  lib.rs  memory.rs  observation.rs  recoverable.rs
src/brainstem/: mod.rs
src/mind/: fake.rs  mod.rs  model.rs
src/planner/: mod.rs  model.rs  rule.rs
src/provider/: fake.rs  mod.rs  openai.rs
src/tool/: builtins.rs  mod.rs
tests/: actor_loop.rs  e2e_ollama.rs  loop_recovery.rs  model_tool_schemas.rs
