[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "A production-shaped LLM agent loop: recoverable errors, native tool-use, budgets, observability."
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }

[[example]]
name = "run"
path = "examples/run.rs"
